# jcamp

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  __init__.py  citation.bib  jcamp.py  pyproject.toml  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: ci.yml
data/Robert_J_Lancashire_test_data/: blckpac1.jdx  blckpkt1.jdx  coffhd.jdx  compound.jdx  dupdec1.jdx  dupdec2.jdx  dupinc1.jdx  dupinc2.jdx  fixdec1.jdx  fixdec2.jdx  fixdec3.jdx  fixinc1.jdx  fixinc2.jdx  fixinc3.jdx  fixinc4.jdx  fixinc5.jdx  jtpolys.jdx  jtpolysd.jdx  mactab1.jdx  mactab2.jdx  o01.jdx  o02.jdx  o03.jdx  o04.jdx  o05.jdx  o06.jdx  o07.jdx  o08.jdx  o09.jdx  o10.jdx  ofid1.jdx  ofid2.jdx  (+9 more)
doc/: demo.ipynb
infrared_spectra/: 1,1,1-trichloroethane.jdx  1,1-dichloroethene.jdx  1,2-dichloroethane.jdx  1,2-dimethylbenzene.jdx  1,3-butadiene.jdx  1,3-dimethylbenzene.jdx  1,4-dimethylbenzene.jdx  1-butanol.jdx  2-butanone.jdx  acrylonitrile.jdx  ammonia.jdx  benzene.jdx  butadiene.jdx  carbon dioxide.jdx  carbon monoxide.jdx  chlorobenzene.jdx  chloroform.jdx  cis-butene.jdx  dichlorodifluoromethane.jdx  dichloromethane.jdx  ethane.jdx  ethanol.jdx  ethyl acetate.jdx  ethyl acrylate.jdx  ethyl benzene.jdx  ethylene oxide.jdx  ethylene.jdx  heptane-2,3-dimethylpentane.jdx  hydrogen sulfide.jdx  iso-pentane.jdx  m-xylene.jdx  methane.jdx  methanol.jdx  methyl bromide.jdx  methyl tert-butyl ether.jdx  methyl_iodide.jdx  n-butane.jdx  n-pentane.jdx  neo-pentane.jdx  ozone.jdx  (+7 more)
mass_spectra/: 1-propanol_ms.jdx  CH4_CI.jdx  Tetrachloroethylene_ms.jdx  ethanol_ms.jdx
uvvis_spectra/: toluene.jdx
(+51 files in other folders)
