[project]
name = "jcamp"
version = "1.3.0"
description = "A set of Python utilities for reading JCAMP-DX files."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
  {name="nzhagen", email="nzhagen@gmail.com"},
]
maintainers = [
  {name="nzhagen", email="nzhagen@gmail.com"},
]
dependencies = [
    "datetime", "numpy", "re", "pdb"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["jcamp", "jcamp-dx", "spectra"]

[project.urls]
Homepage = "https://github.com/nzhagen/jcamp"
Issues = "https://github.com/nzhagen/jcamp/issues"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
