[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jcamp"
version = "1.3.0"
description = "A set of Python utilities for reading JCAMP-DX files."
readme = "README.md"
authors = [{name = "nzhagen", email = "nh@hagenlab.org"}]
license = {file = "LICENSE.txt"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.8"
dependencies = ["datetime", "numpy", "re", "pdb"]
keywords = ["jcamp", "jcamp-dx", "spectra"]

[project.urls]
Home = "https://github.com/nzhagen/jcamp"
